infrastructure/trivy-operator/trivy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    #istio.io/dataplane-mode: ambient
  name: trivy-system
